--- a/bags.html
+++ b/bags.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Product</title>
+    <title>Bags</title>
      <!-- bootstrap style sheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <!-- favicon link -->
@@ -140,78 +140,8 @@
             </div>
           </div>
     </section>
-    <!-- jacket section  -->
-    <section class="container">
-        <h1 class="text-center mt-5 mb-5  text-primary fw-bold fs-1">Choose Your Jacket</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="jackets/jacket-1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Black Jacket</h5>
-                  <p>Price: $200</p>
-                  <p class="card-text">A Jacket is a common tool in the form of a non-rigid container. The use of bags predates recorded history, with the earliest bags being lengths of animal skin, ...</p>
-                  <button type="button" class="btn btn-outline-primary">Buy Now</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="jackets/jacket-2.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Jacket Backpack</h5>
-                  <p>Price: $200</p>
-                  <p class="card-text">A Jacket is a common tool in the form of a non-rigid container. The use of bags predates recorded history, with the earliest bags being lengths of animal skin, ...</p>
-                  <button type="button" class="btn btn-outline-primary">Buy Now</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="jackets/jacket-3.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Jacket Backpack</h5>
-                  <p>Price: $200</p>
-                  <p class="card-text">A Jacket is a common tool in the form of a non-rigid container. The use of bags predates recorded history, with the earliest bags being lengths of animal skin, ...</p>
-                  <button type="button" class="btn btn-outline-primary">Buy Now</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="jackets/jacket-4.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Light Jacket</h5>
-                  <p>Price: $200</p>
-                  <p class="card-text">A Jacket is a common tool in the form of a non-rigid container. The use of bags predates recorded history, with the earliest bags being lengths of animal skin, ...</p>
-                  <button type="button" class="btn btn-outline-primary">Buy Now</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="jackets/jacket-7.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Light Jacket</h5>
-                  <p>Price: $200</p>
-                  <p class="card-text">A Jacket is a common tool in the form of a non-rigid container. The use of bags predates recorded history, with the earliest bags being lengths of animal skin, ...</p>
-                  <button type="button" class="btn btn-outline-primary">Buy Now</button>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="jackets/jacket-6.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Light Jacket</h5>
-                  <p>Price: $200</p>
-                  <p class="card-text">A Jacket is a common tool in the form of a non-rigid container. The use of bags predates recorded history, with the earliest bags being lengths of animal skin, ...</p>
-                  <button type="button" class="btn btn-outline-primary">Buy Now</button>
-                </div>
-              </div>
-            </div>
-          </div>
-    </section>
+  
+ 
    </main>
    <footer class="footer bg-dark text-white mt-5 p-5">
          <div>
